// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`sequenceMap '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequenceMap 'this' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'that'",
  ],
  "pos": {
    "column": 5,
    "index": 4,
    "line": 1,
  },
}
`;

exports[`sequenceMap 'that' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`sequenceMap 'thisthat' conditional success tests AST to match snapshot 1`] = `"thisthat"`;

exports[`sequenceMap 'thisthatfoo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": {
    "column": 9,
    "index": 8,
    "line": 1,
  },
}
`;

exports[`sequenceMap 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'this'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
